--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,15 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation "androidx.camera:camera-core:1.2.1"
-    implementation "androidx.camera:camera-camera2:1.2.1"
-    implementation "androidx.camera:camera-lifecycle:1.2.1"
+    implementation "androidx.camera:camera-core:1.2.2"
+    implementation "androidx.camera:camera-camera2:1.2.2"
+    implementation "androidx.camera:camera-lifecycle:1.2.2"
     implementation "androidx.camera:camera-view:1.2.2"
+
+    implementation "com.quickbirdstudios:opencv:3.4.1"
+
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'com.github.wendykierp:JTransforms:3.1'
+
+    implementation 'com.google.guava:guava:30.1-jre'
 }
